app1/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-test
spec:
  selector:
    matchLabels:
      app: app-test
  template:
    metadata:
      labels:
        app: app-test
    spec:
      containers:
      - name: app-test
        image: app-test
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5000
      #   env:
      #     - name: ASPNETCORE_ENVIRONMENT
      #       value: DEVELOPMENT
      #     - name: ASPNETCORE_URLS
      #       value: http://+:8080
      #   volumeMounts:
      #     - mountPath: /app/appsettings.json
      #       name: app-test-app-settings
      #       subPath: appsettings.json
      # volumes:
      #   - name: app-test-app-settings
      #     configMap: 
      #       name: app-test-config
