app1/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-test-service
spec:
  type: ClusterIP
  selector:
    app: app-test
  ports:
  - port: 80
    targetPort: 5000
