app1/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-test-ingress
  labels:
    name: app-test-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /heckle
        backend:
          service:
            name: app-test-service
            port: 
              number: 80
